--- a/aspidpartners/home.html
+++ b/aspidpartners/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250331001140">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250331082834">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,6 +58,13 @@
 							</li>
 						</ul>
 					</nav>
+					<div data-da=".menu__body, 767.98" class="menu__select">
+						<select name="form[]" data-class-modif="form">
+							<option value="1" selected>EN</option>
+							<option value="2">UA</option>
+							<option value="3">中文</option>
+						</select>
+					</div>
 				</div>
 				<div data-da=".menu__body, 767.98" class="header__actions actions-header">
 					<div class="actions-header__item">
@@ -785,7 +792,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20250331001140"></script>
+	<script src="js/app.min.js?_v=20250331082834"></script>
 </body>
 
 </html>
